--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     </div>
       
     <div class="sign">
-      by masahito / <a href="http://www.ma5a.com/" >ma5a.com</a>
+      by zest.tbz / <a href="http://www.ma5a.com/" >check project</a>
     </div>
   </body>
