--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
 
 
-  <title>interactive hungry bear</title>
+  <title>em đóiii</title>
 
     <link rel="canonical" href="https://codepen.io/Ma5a/pen/ogNKRzd">
   
@@ -423,7 +423,7 @@ a:hover {
           </div><div class="food donut object" style="--w: 72px; --h: 54px; --max-w: 0px; --max-h: 0px; left: 646.5px; top: 266px; z-index: 0; transform-origin: center center;"></div></div>
     
   <div class="sign">
-    by masahito / <a href="http://www.ma5a.com/">ma5a.com</a>
+    by zest / <a href="http://www.ma5a.com/">my project</a>
   </div>
 
   
